changing folder structure and names

--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -15,12 +15,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4dc3c92b-eb15-49f9-8b16-3e3939c81c12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "your 131072x1 screen size is bogus. expect trouble\n",
+      "23/08/28 19:51:42 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/28 19:51:42 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/08/28 19:51:52 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder.master('local[*]').appName('PysparkDataPipeline').getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ac165f1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "your 131072x1 screen size is bogus. expect trouble\n",
+      "23/08/28 20:38:26 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/28 20:38:26 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":: loading settings :: url = jar:file:/root/miniconda3/envs/pramod_dev/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /root/.ivy2/cache\n",
+      "The jars for the packages stored in: /root/.ivy2/jars\n",
+      "io.delta#delta-core_2.12 added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-981fc213-8527-4f9f-acc2-824150d7b8c5;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound io.delta#delta-core_2.12;2.4.0 in central\n",
+      "\tfound io.delta#delta-storage;2.4.0 in central\n",
+      "\tfound org.antlr#antlr4-runtime;4.9.3 in central\n",
+      ":: resolution report :: resolve 131ms :: artifacts dl 5ms\n",
+      "\t:: modules in use:\n",
+      "\tio.delta#delta-core_2.12;2.4.0 from central in [default]\n",
+      "\tio.delta#delta-storage;2.4.0 from central in [default]\n",
+      "\torg.antlr#antlr4-runtime;4.9.3 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   3   |   0   |   0   |   0   ||   3   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-981fc213-8527-4f9f-acc2-824150d7b8c5\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 3 already retrieved (0kB/4ms)\n",
+      "23/08/28 20:38:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyspark\n",
+    "from delta import *\n",
+    "\n",
+    "builder = SparkSession.builder.appName(\"MyApp\") \\\n",
+    "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
+    "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\")\n",
+    "\n",
+    "spark = configure_spark_with_delta_pip(builder).getOrCreate()"
    ]
   },
   {
@@ -44,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "5ff5845b-115b-4fd1-9f6e-6e6f69974f07",
    "metadata": {},
    "outputs": [],
@@ -54,10 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "d6481333-129d-4bd0-971f-c8689be62dba",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2498,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3b2cca44",
    "metadata": {},
    "outputs": [],
@@ -2519,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6a52dc6f",
    "metadata": {},
    "outputs": [],
@@ -2530,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "41e93745",
    "metadata": {},
    "outputs": [
@@ -2648,8 +2733,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e0237dff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/08/28 20:39:08 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "Scaling row group sizes to 95.00% for 8 writers\n",
+      "23/08/28 20:39:10 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "additional_options = {\n",
+    "    \"path\": \"/root/Work/Repositories/memory/training/pyspark/PracticeProblems/delta\"\n",
+    "}\n",
+    "delivery_df.write.format('delta').saveAsTable(\"people10m\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0693c280",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------+----------+---------------------------+\n",
+      "|delivery_id|customer_id|order_date|customer_pref_delivery_date|\n",
+      "+-----------+-----------+----------+---------------------------+\n",
+      "|          1|          1|2019-08-01|                 2019-08-02|\n",
+      "|          4|          3|2019-08-24|                 2019-08-24|\n",
+      "|          3|          1|2019-08-11|                 2019-08-12|\n",
+      "|          6|          2|2019-08-11|                 2019-08-13|\n",
+      "|          5|          3|2019-08-21|                 2019-08-22|\n",
+      "|          2|          2|2019-08-02|                 2019-08-02|\n",
+      "|          7|          4|2019-08-09|                 2019-08-09|\n",
+      "+-----------+-----------+----------+---------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql('select * from people10m').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9b3a1c4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[num_affected_rows: bigint]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.sql('DELETE from people10m where customer_id = 1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bc048dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 0 files and directories in a total of 1 directories.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from delta.tables import *\n",
+    "\n",
+    "deltaTable = DeltaTable.forName(spark, 'people10m')    # Hive metastore-based tables\n",
+    "\n",
+    "deltaTable.vacuum(168)        # vacuum files not required by versions older than the default retention period\n",
+    "\n",
+    "# deltaTable.vacuum(100)     # vacuum files not required by versions more than 100 hours old"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e5b1e28",
    "metadata": {},
    "outputs": [],
    "source": []
