--- a/training/pyspark/delta_lake/delta_table.ipynb
+++ b/training/pyspark/delta_lake/delta_table.ipynb
@@ -2,9 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "your 131072x1 screen size is bogus. expect trouble\n",
+      "23/08/29 17:27:05 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/29 17:27:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":: loading settings :: url = jar:file:/root/miniconda3/envs/pramod_dev/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /root/.ivy2/cache\n",
+      "The jars for the packages stored in: /root/.ivy2/jars\n",
+      "io.delta#delta-core_2.12 added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-e4db3721-077d-4f4e-a3a6-3b2b9cafd5c1;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound io.delta#delta-core_2.12;2.4.0 in central\n",
+      "\tfound io.delta#delta-storage;2.4.0 in central\n",
+      "\tfound org.antlr#antlr4-runtime;4.9.3 in central\n",
+      ":: resolution report :: resolve 167ms :: artifacts dl 5ms\n",
+      "\t:: modules in use:\n",
+      "\tio.delta#delta-core_2.12;2.4.0 from central in [default]\n",
+      "\tio.delta#delta-storage;2.4.0 from central in [default]\n",
+      "\torg.antlr#antlr4-runtime;4.9.3 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   3   |   0   |   0   |   0   ||   3   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-e4db3721-077d-4f4e-a3a6-3b2b9cafd5c1\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 3 already retrieved (0kB/5ms)\n",
+      "23/08/29 17:27:16 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import col\n",
@@ -19,71 +67,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random, string\n",
     "df = spark.createDataFrame([[i, random.choice(string.ascii_uppercase)] for i in range(100)], ['id', 'value'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 95.00% for 8 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 84.44% for 9 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 76.00% for 10 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 69.09% for 11 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 63.33% for 12 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 58.46% for 13 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 54.29% for 14 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 50.67% for 15 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 47.50% for 16 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 50.67% for 15 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 54.29% for 14 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 58.46% for 13 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 63.33% for 12 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 69.09% for 11 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 76.00% for 10 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 84.44% for 9 writers\n",
-      "23/08/28 23:02:40 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "23/08/29 17:34:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
       "Scaling row group sizes to 95.00% for 8 writers\n",
-      "23/08/28 23:02:42 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "23/08/29 17:34:23 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "additional_options = {\n",
-    "    \"path\": \"/root/Work/Repositories/memory/training/pyspark/PracticeProblems/delta\"\n",
-    "}\n",
     "df.write.format('delta').saveAsTable(\"test_delta_table\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -93,26 +139,26 @@
       "+---+-----+\n",
       "| id|value|\n",
       "+---+-----+\n",
-      "|  0|    W|\n",
-      "|  1|    V|\n",
-      "|  2|    D|\n",
-      "|  3|    V|\n",
-      "|  4|    U|\n",
-      "|  5|    F|\n",
-      "| 66|    Z|\n",
-      "| 67|    W|\n",
-      "| 68|    H|\n",
-      "| 69|    A|\n",
-      "| 70|    I|\n",
-      "| 71|    B|\n",
-      "| 60|    P|\n",
-      "| 61|    V|\n",
-      "| 62|    O|\n",
-      "| 63|    C|\n",
-      "| 64|    S|\n",
-      "| 65|    N|\n",
-      "| 72|    D|\n",
-      "| 73|    G|\n",
+      "| 72|    N|\n",
+      "| 73|    B|\n",
+      "| 74|    O|\n",
+      "| 75|    B|\n",
+      "| 76|    O|\n",
+      "| 77|    A|\n",
+      "| 84|    Y|\n",
+      "| 85|    G|\n",
+      "| 86|    Z|\n",
+      "| 87|    K|\n",
+      "| 88|    C|\n",
+      "| 89|    C|\n",
+      "|  6|    I|\n",
+      "|  7|    K|\n",
+      "|  8|    X|\n",
+      "|  9|    G|\n",
+      "| 10|    F|\n",
+      "| 11|    W|\n",
+      "| 30|    Y|\n",
+      "| 31|    G|\n",
       "+---+-----+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -125,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +180,7 @@
        "100"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +200,7 @@
        "DataFrame[num_affected_rows: bigint]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +220,7 @@
        "99"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +240,7 @@
        "DataFrame[path: string, metrics: struct<numFilesAdded:bigint,numFilesRemoved:bigint,filesAdded:struct<min:bigint,max:bigint,avg:double,totalFiles:bigint,totalSize:bigint>,filesRemoved:struct<min:bigint,max:bigint,avg:double,totalFiles:bigint,totalSize:bigint>,partitionsOptimized:bigint,zOrderStats:struct<strategyName:string,inputCubeFiles:struct<num:bigint,size:bigint>,inputOtherFiles:struct<num:bigint,size:bigint>,inputNumCubes:bigint,mergedFiles:struct<num:bigint,size:bigint>,numOutputCubes:bigint,mergedNumCubes:bigint>,numBatches:bigint,totalConsideredFiles:bigint,totalFilesSkipped:bigint,preserveInsertionOrder:boolean,numFilesSkippedToReduceWriteAmplification:bigint,numBytesSkippedToReduceWriteAmplification:bigint,startTimeMs:bigint,endTimeMs:bigint,totalClusterParallelism:bigint,totalScheduledTasks:bigint,autoCompactParallelismStats:struct<maxClusterActiveParallelism:bigint,minClusterActiveParallelism:bigint,maxSessionActiveParallelism:bigint,minSessionActiveParallelism:bigint>,deletionVectorStats:struct<numDeletionVectorsRemoved:bigint,numDeletionVectorRowsRemoved:bigint>,numTableColumns:bigint,numTableColumnsWithStats:bigint>]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -215,9 +261,9 @@
       "+-------+--------------------+------+--------+--------------------+--------------------+----+--------+---------+-----------+-----------------+-------------+--------------------+------------+--------------------+\n",
       "|version|           timestamp|userId|userName|           operation| operationParameters| job|notebook|clusterId|readVersion|   isolationLevel|isBlindAppend|    operationMetrics|userMetadata|          engineInfo|\n",
       "+-------+--------------------+------+--------+--------------------+--------------------+----+--------+---------+-----------+-----------------+-------------+--------------------+------------+--------------------+\n",
-      "|      2|2023-08-28 23:14:...|  null|    null|            OPTIMIZE|{predicate -> [],...|null|    null|     null|          1|SnapshotIsolation|        false|{numRemovedFiles ...|        null|Apache-Spark/3.4....|\n",
-      "|      1|2023-08-28 23:04:...|  null|    null|              DELETE|{predicate -> [\"(...|null|    null|     null|          0|     Serializable|        false|{numRemovedFiles ...|        null|Apache-Spark/3.4....|\n",
-      "|      0|2023-08-28 23:02:...|  null|    null|CREATE TABLE AS S...|{isManaged -> tru...|null|    null|     null|       null|     Serializable|         true|{numFiles -> 16, ...|        null|Apache-Spark/3.4....|\n",
+      "|      2|2023-08-29 17:34:...|  null|    null|            OPTIMIZE|{predicate -> [],...|null|    null|     null|          1|SnapshotIsolation|        false|{numRemovedFiles ...|        null|Apache-Spark/3.4....|\n",
+      "|      1|2023-08-29 17:34:...|  null|    null|              DELETE|{predicate -> [\"(...|null|    null|     null|          0|     Serializable|        false|{numRemovedFiles ...|        null|Apache-Spark/3.4....|\n",
+      "|      0|2023-08-29 17:34:...|  null|    null|CREATE TABLE AS S...|{isManaged -> tru...|null|    null|     null|       null|     Serializable|         true|{numFiles -> 16, ...|        null|Apache-Spark/3.4....|\n",
       "+-------+--------------------+------+--------+--------------------+--------------------+----+--------+---------+-----------+-----------------+-------------+--------------------+------------+--------------------+\n",
       "\n"
      ]
@@ -229,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -299,6 +345,68 @@
    ],
    "source": [
     "spark.sql('VACUUM test_delta_table').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 0 files and directories in a total of 1 directories.\n",
+      "+--------------------+\n",
+      "|                path|\n",
+      "+--------------------+\n",
+      "|file:/root/Work/R...|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.conf.set('spark.databricks.delta.retentionDurationCheck.enabled', False)\n",
+    "spark.sql('VACUUM test_delta_table').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 17 files and directories in a total of 1 directories.\n",
+      "+--------------------+\n",
+      "|                path|\n",
+      "+--------------------+\n",
+      "|file:/root/Work/R...|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.conf.set('spark.databricks.delta.retentionDurationCheck.enabled', False)\n",
+    "spark.sql('VACUUM test_delta_table RETAIN 0 HOURS').show()"
    ]
   },
   {
