--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct, round, first, lit\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct, round, first, lit, dense_rank\n",
     "from datetime import datetime"
    ]
   },
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/28 19:51:42 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/28 19:51:42 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/31 00:08:23 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/31 00:08:23 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/28 19:51:52 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/31 00:08:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ac165f1a",
    "metadata": {},
    "outputs": [
@@ -46,59 +46,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/28 20:38:26 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/28 20:38:26 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":: loading settings :: url = jar:file:/root/miniconda3/envs/pramod_dev/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ivy Default Cache set to: /root/.ivy2/cache\n",
-      "The jars for the packages stored in: /root/.ivy2/jars\n",
-      "io.delta#delta-core_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-981fc213-8527-4f9f-acc2-824150d7b8c5;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound io.delta#delta-core_2.12;2.4.0 in central\n",
-      "\tfound io.delta#delta-storage;2.4.0 in central\n",
-      "\tfound org.antlr#antlr4-runtime;4.9.3 in central\n",
-      ":: resolution report :: resolve 131ms :: artifacts dl 5ms\n",
-      "\t:: modules in use:\n",
-      "\tio.delta#delta-core_2.12;2.4.0 from central in [default]\n",
-      "\tio.delta#delta-storage;2.4.0 from central in [default]\n",
-      "\torg.antlr#antlr4-runtime;4.9.3 from central in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   3   |   0   |   0   |   0   ||   3   |   0   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-981fc213-8527-4f9f-acc2-824150d7b8c5\n",
-      "\tconfs: [default]\n",
-      "\t0 artifacts copied, 3 already retrieved (0kB/4ms)\n",
-      "23/08/28 20:38:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "23/08/30 23:56:52 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     }
    ],
    "source": [
-    "import pyspark\n",
-    "from delta import *\n",
+    "# import pyspark\n",
+    "# from delta import *\n",
     "\n",
-    "builder = SparkSession.builder.appName(\"MyApp\") \\\n",
-    "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
-    "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\")\n",
+    "# builder = SparkSession.builder.appName(\"MyApp\") \\\n",
+    "#     .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
+    "#     .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\")\n",
     "\n",
-    "spark = configure_spark_with_delta_pip(builder).getOrCreate()"
+    "# spark = configure_spark_with_delta_pip(builder).getOrCreate()"
    ]
   },
   {
@@ -2732,124 +2692,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e5b1e28",
+   "metadata": {},
+   "source": [
+    "#### Department Top Three Salaries\n",
+    "#### https://leetcode.com/problems/department-top-three-salaries/?envType=study-plan-v2&envId=top-sql-50"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e0237dff",
+   "execution_count": 3,
+   "id": "fb6f4e18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                             StructField('name', StringType(), False),\n",
+    "                             StructField('salary', IntegerType(), True),\n",
+    "                             StructField('departmentId', IntegerType(), True)])\n",
+    "employee_df = spark.createDataFrame([[1, 'Joe', 85000, 1],\n",
+    "                                     [2, 'Henry', 80000, 2],\n",
+    "                                     [3, 'Sam', 60000, 2],\n",
+    "                                     [4, 'Max', 90000, 1],\n",
+    "                                     [5, 'Janet', 69000, 1],\n",
+    "                                     [6, 'Randy', 85000, 1],\n",
+    "                                     [7, 'Will', 70000, 1]], schema=employee_schema)\n",
+    "\n",
+    "department_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                                StructField('name', StringType(), True)])\n",
+    "department_df = spark.createDataFrame([[1, 'IT'],\n",
+    "                                       [2, 'Sales']], schema=department_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e2699f79",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/08/28 20:39:08 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
-      "Scaling row group sizes to 95.00% for 8 writers\n",
-      "23/08/28 20:39:10 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
-    }
-   ],
-   "source": [
-    "additional_options = {\n",
-    "    \"path\": \"/root/Work/Repositories/memory/training/pyspark/PracticeProblems/delta\"\n",
-    "}\n",
-    "delivery_df.write.format('delta').saveAsTable(\"people10m\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0693c280",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+-----------+----------+---------------------------+\n",
-      "|delivery_id|customer_id|order_date|customer_pref_delivery_date|\n",
-      "+-----------+-----------+----------+---------------------------+\n",
-      "|          1|          1|2019-08-01|                 2019-08-02|\n",
-      "|          4|          3|2019-08-24|                 2019-08-24|\n",
-      "|          3|          1|2019-08-11|                 2019-08-12|\n",
-      "|          6|          2|2019-08-11|                 2019-08-13|\n",
-      "|          5|          3|2019-08-21|                 2019-08-22|\n",
-      "|          2|          2|2019-08-02|                 2019-08-02|\n",
-      "|          7|          4|2019-08-09|                 2019-08-09|\n",
-      "+-----------+-----------+----------+---------------------------+\n",
+      "+---+-----+------+------------+\n",
+      "| id| name|salary|departmentId|\n",
+      "+---+-----+------+------------+\n",
+      "|  1|  Joe| 85000|           1|\n",
+      "|  2|Henry| 80000|           2|\n",
+      "|  3|  Sam| 60000|           2|\n",
+      "|  4|  Max| 90000|           1|\n",
+      "|  5|Janet| 69000|           1|\n",
+      "|  6|Randy| 85000|           1|\n",
+      "|  7| Will| 70000|           1|\n",
+      "+---+-----+------+------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "spark.sql('select * from people10m').show()"
+    "employee_df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9b3a1c4a",
+   "execution_count": 5,
+   "id": "dd1dd78a",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[num_affected_rows: bigint]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql('DELETE from people10m where customer_id = 1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "bc048dc6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted 0 files and directories in a total of 1 directories.\n"
+      "+---+-----+\n",
+      "| id| name|\n",
+      "+---+-----+\n",
+      "|  1|   IT|\n",
+      "|  2|Sales|\n",
+      "+---+-----+\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from delta.tables import *\n",
-    "\n",
-    "deltaTable = DeltaTable.forName(spark, 'people10m')    # Hive metastore-based tables\n",
-    "\n",
-    "deltaTable.vacuum(168)        # vacuum files not required by versions older than the default retention period\n",
-    "\n",
-    "# deltaTable.vacuum(100)     # vacuum files not required by versions more than 100 hours old"
+    "department_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e9866cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------+------+\n",
+      "|Department|Employee|Salary|\n",
+      "+----------+--------+------+\n",
+      "|        IT|    Will| 70000|\n",
+      "|        IT|   Randy| 85000|\n",
+      "|        IT|     Joe| 85000|\n",
+      "|        IT|     Max| 90000|\n",
+      "|     Sales|     Sam| 60000|\n",
+      "|     Sales|   Henry| 80000|\n",
+      "+----------+--------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee_df.withColumn('rnk', dense_rank().over(Window.partitionBy('departmentId').orderBy(col('Salary').desc())))\\\n",
+    "    .select(col('name').alias('Employee'), col('salary').alias('Salary'), col('departmentId'))\\\n",
+    "    .filter(col('rnk') <= 3)\\\n",
+    "    .join(department_df, department_df.id == employee_df.departmentId)\\\n",
+    "    .select(col('name').alias('Department'), 'Employee', 'Salary')\\\n",
+    "    .show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e5b1e28",
+   "id": "f2482c62",
    "metadata": {},
    "outputs": [],
    "source": []
