UDF and string manipulation example

--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct, round, first, lit, dense_rank\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, upper, lower,\\\n",
+    "    length, year, countDistinct, round, first, lit, dense_rank, substring, udf\n",
     "from datetime import datetime"
    ]
   },
@@ -2819,9 +2820,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2482c62",
+   "metadata": {},
+   "source": [
+    "#### Fix Names in a Table\n",
+    "#### https://leetcode.com/problems/fix-names-in-a-table/description/?envType=study-plan-v2&envId=top-sql-50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ca3f5a19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users_schema = StructType([StructField('user_id', IntegerType(), False),\n",
+    "                           StructField('name', StringType(), False)])\n",
+    "users_df = spark.createDataFrame([[1, 'aLice'],\n",
+    "                                  [2, 'bOB']], schema=users_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0b3b19e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----+\n",
+      "|user_id| name|\n",
+      "+-------+-----+\n",
+      "|      1|aLice|\n",
+      "|      2|  bOB|\n",
+      "+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "users_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "3096c610",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----+\n",
+      "|user_id| name|\n",
+      "+-------+-----+\n",
+      "|      1|Alice|\n",
+      "|      2|  Bob|\n",
+      "+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "case_fix_udf = udf(lambda x: x[0].upper() + x[1:].lower(), StringType())\n",
+    "\n",
+    "users_df.withColumn('length', length('name'))\\\n",
+    "    .select('user_id', case_fix_udf(col('name')).alias('name')).show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2482c62",
+   "id": "0cb39eca",
    "metadata": {},
    "outputs": [],
    "source": []
