managers with atleast 5 direct reports

--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -25,11 +25,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/31 00:08:23 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/31 00:08:23 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/09/09 17:41:39 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/09/09 17:41:39 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/31 00:08:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/09/09 17:41:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -2703,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "fb6f4e18",
    "metadata": {},
    "outputs": [],
@@ -2894,9 +2894,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cc40629",
+   "metadata": {},
+   "source": [
+    "#### 570. Managers with at Least 5 Direct Reports\n",
+    "#### https://leetcode.com/problems/managers-with-at-least-5-direct-reports/description/?envType=study-plan-v2&envId=top-sql-50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "06cdc717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                                           StructField('name', StringType(), False),\n",
+    "                                           StructField('department', StringType(), False),\n",
+    "                                           StructField('managerId', IntegerType(), True)])\n",
+    "employee_df = spark.createDataFrame([[101, 'John', 'A', None],\n",
+    "                                     [102, 'Dan',  'A', 101],\n",
+    "                                     [103, 'James', 'A', 101],\n",
+    "                                     [104, 'Amy',  'A', 101],\n",
+    "                                     [105, 'Anne', 'A', 101],\n",
+    "                                     [106, 'Ron',  'B', 101]], schema=employee_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4301817d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+----------+---------+\n",
+      "| id| name|department|managerId|\n",
+      "+---+-----+----------+---------+\n",
+      "|101| John|         A|     null|\n",
+      "|102|  Dan|         A|      101|\n",
+      "|103|James|         A|      101|\n",
+      "|104|  Amy|         A|      101|\n",
+      "|105| Anne|         A|      101|\n",
+      "|106|  Ron|         B|      101|\n",
+      "+---+-----+----------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1bad9897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+\n",
+      "|name|\n",
+      "+----+\n",
+      "|John|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee_df.groupBy('managerId').count()\\\n",
+    "    .filter(col('count') >= 5).alias('t')\\\n",
+    "    .join(employee_df.alias('e'), col('t.managerId') == col('e.id'))\\\n",
+    "    .select('name').show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb39eca",
+   "id": "45934b22",
    "metadata": {},
    "outputs": [],
    "source": []
