changing env name

--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
     "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, upper, lower,\\\n",
-    "    length, year, countDistinct, round, first, lit, dense_rank, substring, udf\n",
+    "    length, year, countDistinct, round, first, lit, dense_rank, substring, udf, broadcast, skewness\n",
     "from datetime import datetime"
    ]
   },
@@ -25,11 +25,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/09/09 17:41:39 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/09/09 17:41:39 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/09/24 16:25:05 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/09/24 16:25:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/09/09 17:41:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/09/24 16:25:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -2703,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "fb6f4e18",
    "metadata": {},
    "outputs": [],
@@ -2904,7 +2904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "06cdc717",
    "metadata": {},
    "outputs": [],
