Not Boring Movies Leetcode problem

--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
-    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType, FloatType\n",
     "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, upper, lower,\\\n",
     "    length, year, countDistinct, round, first, lit, dense_rank, substring, udf, broadcast, skewness\n",
     "from datetime import datetime"
@@ -25,16 +25,17 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/09/24 16:25:05 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/09/24 16:25:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/09/29 17:11:24 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/09/29 17:11:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/09/24 16:25:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/09/29 17:11:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
-    "spark = SparkSession.builder.master('local[*]').appName('PysparkDataPipeline').getOrCreate()"
+    "spark = SparkSession.builder.master(\n",
+    "    'local[*]').appName('PysparkDataPipeline').getOrCreate()"
    ]
   },
   {
@@ -398,7 +399,8 @@
     }
    ],
    "source": [
-    "employees_df.join(employee_uni_df, how='left', on=['id']).select('unique_id', 'name').show()"
+    "employees_df.join(employee_uni_df, how='left', on=[\n",
+    "                  'id']).select('unique_id', 'name').show()"
    ]
   },
   {
@@ -420,7 +422,8 @@
     "signups_schema = StructType([StructField('user_id', IntegerType(), False),\n",
     "                             StructField('time_stamp', TimestampType(), True)])\n",
     "confirmations_schema = StructType([StructField('user_id', IntegerType(), True),\n",
-    "                                   StructField('time_stamp', TimestampType(), True),\n",
+    "                                   StructField(\n",
+    "                                       'time_stamp', TimestampType(), True),\n",
     "                                   StructField('action', StringType(), True)])"
    ]
   },
@@ -432,15 +435,22 @@
    "outputs": [],
    "source": [
     "sinups_df = spark.createDataFrame([[3, datetime.strptime('2020-03-21 10:16:13', '%Y-%m-%d %H:%M:%S')],\n",
-    "                                   [7, datetime.strptime('2020-01-04 13:57:59', '%Y-%m-%d %H:%M:%S')],\n",
-    "                                   [2, datetime.strptime('2020-07-29 23:09:44', '%Y-%m-%d %H:%M:%S')],\n",
+    "                                   [7, datetime.strptime(\n",
+    "                                       '2020-01-04 13:57:59', '%Y-%m-%d %H:%M:%S')],\n",
+    "                                   [2, datetime.strptime(\n",
+    "                                       '2020-07-29 23:09:44', '%Y-%m-%d %H:%M:%S')],\n",
     "                                   [6, datetime.strptime('2020-12-09 10:39:37', '%Y-%m-%d %H:%M:%S')]], schema=signups_schema)\n",
     "confirmations_df = spark.createDataFrame([[3, datetime.strptime('2021-01-06 03:30:46', '%Y-%m-%d %H:%M:%S'), 'timeout'],\n",
-    "                                          [3, datetime.strptime('2021-07-14 14:00:00', '%Y-%m-%d %H:%M:%S'), 'timeout'],\n",
-    "                                          [7, datetime.strptime('2021-06-12 11:57:29', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
-    "                                          [7, datetime.strptime('2021-06-13 12:58:28', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
-    "                                          [7, datetime.strptime('2021-06-14 13:59:27', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
-    "                                          [2, datetime.strptime('2021-01-22 00:00:00', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [3, datetime.strptime(\n",
+    "                                              '2021-07-14 14:00:00', '%Y-%m-%d %H:%M:%S'), 'timeout'],\n",
+    "                                          [7, datetime.strptime(\n",
+    "                                              '2021-06-12 11:57:29', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [7, datetime.strptime(\n",
+    "                                              '2021-06-13 12:58:28', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [7, datetime.strptime(\n",
+    "                                              '2021-06-14 13:59:27', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [2, datetime.strptime(\n",
+    "                                              '2021-01-22 00:00:00', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
     "                                          [2, datetime.strptime('2021-02-28 23:59:59', '%Y-%m-%d %H:%M:%S'), 'timeout']], schema=confirmations_schema)"
    ]
   },
@@ -1446,7 +1456,8 @@
     }
    ],
    "source": [
-    "grouped_df.filter(col('count') == product_df.count()).select('customer_id').show()"
+    "grouped_df.filter(col('count') == product_df.count()\n",
+    "                  ).select('customer_id').show()"
    ]
   },
   {
@@ -2158,7 +2169,8 @@
     }
    ],
    "source": [
-    "df.filter(col('amount') > 500).select(countDistinct(col('customer_id')).alias('rich_count')).show()"
+    "df.filter(col('amount') > 500).select(countDistinct(\n",
+    "    col('customer_id')).alias('rich_count')).show()"
    ]
   },
   {
@@ -2300,7 +2312,8 @@
     "                                   [8, 54]], schema=visits_schema)\n",
     "\n",
     "transactions_schema = StructType([StructField('transaction_id', IntegerType(), False),\n",
-    "                                  StructField('visit_id', IntegerType(), False),\n",
+    "                                  StructField(\n",
+    "                                      'visit_id', IntegerType(), False),\n",
     "                                  StructField('amount', IntegerType(), False)])\n",
     "transactions_df = spark.createDataFrame([[2, 5, 310],\n",
     "                                         [3, 5, 300],\n",
@@ -2395,7 +2408,8 @@
     }
    ],
    "source": [
-    "unique_visit_ids_who_transacted = [i[0] for i in transactions_df.select('visit_id').distinct().collect()]\n",
+    "unique_visit_ids_who_transacted = [\n",
+    "    i[0] for i in transactions_df.select('visit_id').distinct().collect()]\n",
     "visits_df.filter(~visits_df['visit_id'].isin(unique_visit_ids_who_transacted))\\\n",
     "    .groupBy('customer_id').count()\\\n",
     "    .withColumnRenamed('count', 'count_no_trans').show()"
@@ -2523,12 +2537,13 @@
    ],
    "source": [
     "from pyspark.sql.functions import min as min_\n",
-    "## note - it is important to alias the pyspark min function since otherwise it would use python min() function and break the code\n",
+    "# note - it is important to alias the pyspark min function since otherwise it would use python min() function and break the code\n",
     "\n",
     "product_df.filter(col('change_date') <= '2019-08-16')\\\n",
-    ".select('product_id', first('new_price').over(Window.partitionBy('product_id').orderBy(col('change_date').desc())).alias('price'))\\\n",
-    ".union(\n",
-    "    product_df.groupBy('product_id').agg(min_('change_date').alias('change_date'))\\\n",
+    "    .select('product_id', first('new_price').over(Window.partitionBy('product_id').orderBy(col('change_date').desc())).alias('price'))\\\n",
+    "    .union(\n",
+    "    product_df.groupBy('product_id').agg(\n",
+    "        min_('change_date').alias('change_date'))\n",
     "    .filter(col('change_date') > '2019-08-16').withColumn('price', lit(10)).select('product_id', 'price')\n",
     ").dropDuplicates().show()"
    ]
@@ -2611,8 +2626,10 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import min as min_\n",
-    "immediate_orders = delivery_df.filter(col('order_date') == col('customer_pref_delivery_date')).withColumn('immediate', lit(1))\n",
-    "first_orders = delivery_df.groupBy('customer_id').agg(min_('order_date').alias('order_date'))"
+    "immediate_orders = delivery_df.filter(col('order_date') == col(\n",
+    "    'customer_pref_delivery_date')).withColumn('immediate', lit(1))\n",
+    "first_orders = delivery_df.groupBy('customer_id').agg(\n",
+    "    min_('order_date').alias('order_date'))"
    ]
   },
   {
@@ -2910,9 +2927,9 @@
    "outputs": [],
    "source": [
     "employee_schema = StructType([StructField('id', IntegerType(), False),\n",
-    "                                           StructField('name', StringType(), False),\n",
-    "                                           StructField('department', StringType(), False),\n",
-    "                                           StructField('managerId', IntegerType(), True)])\n",
+    "                              StructField('name', StringType(), False),\n",
+    "                              StructField('department', StringType(), False),\n",
+    "                              StructField('managerId', IntegerType(), True)])\n",
     "employee_df = spark.createDataFrame([[101, 'John', 'A', None],\n",
     "                                     [102, 'Dan',  'A', 101],\n",
     "                                     [103, 'James', 'A', 101],\n",
@@ -2990,9 +3007,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45934b22",
+   "metadata": {},
+   "source": [
+    "#### 620. Not Boring Movies\n",
+    "#### https://leetcode.com/problems/not-boring-movies/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4ad9728b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cinema_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                            StructField('movie', StringType(), True),\n",
+    "                            StructField('description', StringType(), True),\n",
+    "                            StructField('rating', FloatType(), False)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ccc3089a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cinema_df = spark.createDataFrame([[1, 'War', 'great 3D', 8.9],\n",
+    "                                   [2, 'Science', 'fiction', 8.5],\n",
+    "                                   [3, 'Irish', 'boring', 6.2],\n",
+    "                                   [4, 'Ice song', 'Fantacy', 8.6],\n",
+    "                                   [5, 'House card', 'Interesting', 9.1]], schema=cinema_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "433fbffb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----------+-----------+------+\n",
+      "| id|     movie|description|rating|\n",
+      "+---+----------+-----------+------+\n",
+      "|  1|       War|   great 3D|   8.9|\n",
+      "|  2|   Science|    fiction|   8.5|\n",
+      "|  3|     Irish|     boring|   6.2|\n",
+      "|  4|  Ice song|    Fantacy|   8.6|\n",
+      "|  5|House card|Interesting|   9.1|\n",
+      "+---+----------+-----------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cinema_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "aee59b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----------+-----------+------+\n",
+      "| id|     movie|description|rating|\n",
+      "+---+----------+-----------+------+\n",
+      "|  5|House card|Interesting|   9.1|\n",
+      "|  1|       War|   great 3D|   8.9|\n",
+      "+---+----------+-----------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cinema_df.filter((col('description') != 'boring') & (col('id') % 2 == 1)).orderBy(col('rating').desc()).show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45934b22",
+   "id": "2995f177",
    "metadata": {},
    "outputs": [],
    "source": []
