Group Sold Products By The Date Leetcode Problem

--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType, FloatType\n",
     "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, upper, lower,\\\n",
-    "    length, year, countDistinct, round, first, lit, dense_rank, substring, udf, broadcast, skewness\n",
+    "    length, year, countDistinct, round, first, lit, dense_rank, substring, udf, broadcast, skewness, sort_array, concat_ws\n",
     "from datetime import datetime"
    ]
   },
@@ -25,11 +25,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/09/29 17:11:24 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/09/29 17:11:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/10/01 00:00:24 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/10/01 00:00:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/09/29 17:11:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/10/01 00:00:34 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -3101,9 +3101,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2995f177",
+   "metadata": {},
+   "source": [
+    "#### 1484. Group Sold Products By The Date\n",
+    "#### https://leetcode.com/problems/group-sold-products-by-the-date/description/?envType=study-plan-v2&envId=top-sql-50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f80c8d0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activities_schema = StructType([StructField('sell_date', StringType(), False), \n",
+    "                                StructField('product', StringType(), True)])\n",
+    "activities_df = spark.createDataFrame([['2020-05-30', 'Headphone'],\n",
+    "                                       ['2020-06-01', 'Pencil'],\n",
+    "                                       ['2020-06-02', 'Mask'],\n",
+    "                                       ['2020-05-30', 'Basketball'],\n",
+    "                                       ['2020-06-01', 'Bible'],\n",
+    "                                       ['2020-06-02', 'Mask'],\n",
+    "                                       ['2020-05-30', 'T-Shirt']], schema=activities_schema).select(col('sell_date').cast('date'), col('product'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "22e0b848",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+\n",
+      "| sell_date|   product|\n",
+      "+----------+----------+\n",
+      "|2020-05-30| Headphone|\n",
+      "|2020-06-01|    Pencil|\n",
+      "|2020-06-02|      Mask|\n",
+      "|2020-05-30|Basketball|\n",
+      "|2020-06-01|     Bible|\n",
+      "|2020-06-02|      Mask|\n",
+      "|2020-05-30|   T-Shirt|\n",
+      "+----------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "activities_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "41f6d5d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- sell_date: date (nullable = true)\n",
+      " |-- product: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "activities_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5f8c61b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------+----------------------------+\n",
+      "|sell_date |num_sold|product                     |\n",
+      "+----------+--------+----------------------------+\n",
+      "|2020-05-30|3       |Basketball,Headphone,T-Shirt|\n",
+      "|2020-06-01|2       |Bible,Pencil                |\n",
+      "|2020-06-02|1       |Mask                        |\n",
+      "+----------+--------+----------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "activities_df.dropDuplicates()\\\n",
+    "    .groupBy('sell_date').agg(count('product').alias('num_sold'), collect_list('product').alias('product'))\\\n",
+    "    .withColumn('product', concat_ws(',', sort_array(col('product'))))\\\n",
+    "    .orderBy('sell_date')\\\n",
+    "    .show(truncate=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2995f177",
+   "id": "6a2cf5d5",
    "metadata": {},
    "outputs": [],
    "source": []
